deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1

  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:

      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: keycloak

          image: __KEYCLOAK_IMAGE__
          imagePullPolicy: Always

          args:
            - start

          ports:
            - name: http
              containerPort: 8080

            - name: management
              containerPort: 9000

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12

          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"

            limits:
              cpu: "2"
              memory: "2Gi"

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000

      terminationGracePeriodSeconds: 30
